--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Meni historije pśez tłocenje myškoweje tasty schowaś">
 <!ENTITY Ctr_bf_space		"Rum mjazy tłocaškami reducěrowaś (jolic móžno)">
 <!ENTITY Ctr_noconicons		"Symbole kontekstowego menija boka pśez pomjenjenja wuměniś (slědk, dalej, stoj, znowego, bok ako cytańske znamje składowaś)">
+<!ENTITY Ctr_altoptionsd	"Bok nastajenjow (about:preferences): default appearance">
 <!ENTITY Ctr_altoptionsp	"Bok nastajenjow (about:preferences): alternatiwny wenkowny naglěd">
 <!ENTITY Ctr_altoptionsw	"Bok nastajenjow (about:preferences) we woknje wócyniś">
 <!ENTITY Ctr_svgfilters		"SVG-barwy za symbole tłocaškow symbolowych rědkow">
