--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Не показывать меню истории при нажатии мыши">
 <!ENTITY Ctr_bf_space		"Уменьшить расстояние между кнопками (если это возможно)">
 <!ENTITY Ctr_noconicons		"Контекстное меню страницы: заменить значки надписями (Назад, Вперёд, Обновить…)">
+<!ENTITY Ctr_altoptionsd	"Страница «Настройки» (about:preferences): default appearance">
 <!ENTITY Ctr_altoptionsp	"Страница «Настройки» (about:preferences): альтернативный вид">
 <!ENTITY Ctr_altoptionsw	"Открывать страницу «Настройки» (about:preferences) в окне">
 <!ENTITY Ctr_svgfilters		"SVG цвета для стандартных значков панели инструментов">
