--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Skrij gumbov pojavni meni zgodovine ob kliku miške">
 <!ENTITY Ctr_bf_space		"Zmanjšaj prostor med gumbi (če je možno)">
 <!ENTITY Ctr_noconicons		"Vsebinski meni strani: nadomesti ikone z oznakami (Nazaj, Naprej ...)">
+<!ENTITY Ctr_altoptionsd	"Stran z možnostmi (about:preferences): default appearance">
 <!ENTITY Ctr_altoptionsp	"Stran z možnostmi (about:preferences): nadomestni videz">
 <!ENTITY Ctr_altoptionsw	"Odpri stran z možnostmi (about:preferences) v oknu">
 <!ENTITY Ctr_svgfilters		"Barve SVG za privzete ikone gumbov orodne vrstice">
