--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Приховати меню історії при натисканні миші">
 <!ENTITY Ctr_bf_space		"Зменшити відстань між кнопками (якщо це можливо)">
 <!ENTITY Ctr_noconicons		"Замінити іконки контекстного меню сторінки написами (назад, вперед, стоп, перезавантажити, сторінка закладок)">
+<!ENTITY Ctr_altoptionsd	"Сторінка «Налаштування» (about:preferences): default appearance">
 <!ENTITY Ctr_altoptionsp	"Сторінка «Налаштування» (about:preferences): альтернативний вигляд">
 <!ENTITY Ctr_altoptionsw	"Відкрити сторінку налаштувань (about:preferences) у новому вікні">
 <!ENTITY Ctr_svgfilters		"SVG кольори для типових іконок кнопок панелі інструментів">
