--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"當滑鼠長按時，不顯示分頁歷史瀏覽選單">
 <!ENTITY Ctr_bf_space		"減少按鈕間距 (如有可能)">
 <!ENTITY Ctr_noconicons		"右鍵選單的「回到上一頁、前進下一頁、停止載入、重新載入、加入書籤」由橫排圖示換回縱排文字風格">
+<!ENTITY Ctr_altoptionsd	"選項頁 (about:preferences): default appearance">
 <!ENTITY Ctr_altoptionsp	"選項頁 (about:preferences): 換個外觀">
 <!ENTITY Ctr_altoptionsw	"用傳統式的彈出新視窗來開啟選項頁 (about:preferences)">
 <!ENTITY Ctr_svgfilters		"改變預設工具列按鈕圖示顏色">
