--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Skrýt nabídku historie tlačítek při kliknutí myší">
 <!ENTITY Ctr_bf_space		"Zmenšit mezery mezi tlačítky (pokud lze)">
 <!ENTITY Ctr_noconicons		"Nahradit ikony v kontextové nabídce stránky textem (zpět, vpřed, zastavit, obnovit, přidat do záložek)">
+<!ENTITY Ctr_altoptionsd	"Stránka nastavení (about:preferences): default appearance">
 <!ENTITY Ctr_altoptionsp	"Stránka nastavení (about:preferences): alternativní vzhled">
 <!ENTITY Ctr_altoptionsw	"Otevřít stránku nastavení (about:preferences) v okně">
 <!ENTITY Ctr_svgfilters		"SVG barvy pro defaultní ikony tlačítek lišty">
