--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Skjul knapperne historik popupmenu når der trykkes på musen">
 <!ENTITY Ctr_bf_space		"Reducér mellemrum mellem knapperne (hvis det er muligt)">
 <!ENTITY Ctr_noconicons		"Side-genvejsmenu: erstat ikoner med mærkater (tilbage, fremad...)">
+<!ENTITY Ctr_altoptionsd	"Options page (about:preferences): default appearance">
 <!ENTITY Ctr_altoptionsp	"Options page (about:preferences): alternative appearance">
 <!ENTITY Ctr_altoptionsw	"Open options page (about:preferences) in a window">
 <!ENTITY Ctr_svgfilters		"SVG-farver til standard værktøjslinje knap ikoner">
