--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Ocultar menú de historial de estos botones al pulsarlos con el ratón">
 <!ENTITY Ctr_bf_space		"Reducir espacio entre estos botones (si es posible)">
 <!ENTITY Ctr_noconicons		"Menú contextual de la página: Reemplazar iconos con etiquetas (Anterior, Siguiente...)">
+<!ENTITY Ctr_altoptionsd	"Página de opciones (about:preferences): default appearance">
 <!ENTITY Ctr_altoptionsp	"Página de opciones (about:preferences): Apariencia alternativa">
 <!ENTITY Ctr_altoptionsw	"Abrir página de opciones (about:preferences) en una ventana">
 <!ENTITY Ctr_svgfilters		"Colores SVG para iconos predeterminados de botones de barra de herramientas">
