--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Nascondi la cronologia tenendo premuto il pulsante Avanti/Indietro mobile">
 <!ENTITY Ctr_bf_space		"Riduci lo spazio tra i pulsanti (se possibile)">
 <!ENTITY Ctr_noconicons		"Sostituisce le icone del menu contestuale con etichette (indietro, avanti, stop, ricarica, segnalibro)">
+<!ENTITY Ctr_altoptionsd	"Options page (about:preferences): default appearance">
 <!ENTITY Ctr_altoptionsp	"Aspetto alternativo per la pagina Opzioni (about:preferences)">
 <!ENTITY Ctr_altoptionsw	"Aprire la pagina Opzioni (about:preferences) in una finestra">
 <!ENTITY Ctr_svgfilters		"Colori SVG per le icone dei pulsanti della barra strumenti">
