--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Ukryj menu historii po naciśnięciu przycisku myszki">
 <!ENTITY Ctr_bf_space		"Zmniejsz odstęp pomiędzy przyciskami (jeżeli możliwe)">
 <!ENTITY Ctr_noconicons		"Zastąp etykietami ikony menu kontekstowego strony (wstecz, do przodu, zatrzymaj, odśwież, dodaj zakładkę)">
+<!ENTITY Ctr_altoptionsd	"Strona opcji (about:preferences): default appearance">
 <!ENTITY Ctr_altoptionsp	"Strona opcji (about:preferences): alternatywny wygląd">
 <!ENTITY Ctr_altoptionsw	"Otwieraj w oknie stronę ustawień (about:preferences)">
 <!ENTITY Ctr_svgfilters		"Kolory SVG ikon przycisków domyślnego paska narzędzi">
@@ -206,11 +207,11 @@
 <!ENTITY Ctr_hideurlgo		"Ukryj przycisk 'Przejdź'">
 <!ENTITY Ctr_hideurlsrg		"Ukryj separatory przycisków 'odśwież, zatrzymaj i przejdź' oraz odstępy">
 <!ENTITY Ctr_urlbardropm	"Przenieś znacznik rozwinięcia na koniec paska adresu">
-<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
+<!ENTITY Ctr_altreaderico	"Alternatywne ikony 'Czytnika'">
 <!ENTITY Ctr_hideprbutton	"Ukryj przycisk informujący o zablokowanym wyskakującym oknie">
-<!ENTITY Ctr_urlbar_ib		"Przycisk tożsamości witryny (pole tożsamości">
-<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
-<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
+<!ENTITY Ctr_urlbar_ib		"Przycisk tożsamości witryny (pole tożsamości)">
+<!ENTITY Ctr_ib_nohovcolor	"Nie pokazuj szarego koloru po najechaniu">
+<!ENTITY Ctr_verifiedcolors	"Kolory przycisków zweryfikowanych stron, połączeń bezpiecznych oraz niebezpiecznych">
 <!ENTITY Ctr_faviconurl		"Ikona ulubionych: ikona bieżącej strony">
 <!ENTITY Ctr_padlock		"Ikona kłódki dla bezpiecznych połączeń">
 <!ENTITY Ctr_padlock_hid	"Ukryta">
