--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -112,6 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Geçmiş menüsü butonunu gizlemek için Fare tuşuna basın">
 <!ENTITY Ctr_bf_space		"Düğmeleri arası boşluğu azaltın (mümkünse)">
 <!ENTITY Ctr_noconicons		"Etiketlerle sayfa içerik menüsü simgelerini değiştirin (geri, ileri, dur, yenile, yerimleri sayfaıs)">
+<!ENTITY Ctr_altoptionsd	"Options page (about:preferences): default appearance">
 <!ENTITY Ctr_altoptionsp	"Options page (about:preferences): alternative appearance">
 <!ENTITY Ctr_altoptionsw	"Open options page (about:preferences) in a window">
 <!ENTITY Ctr_svgfilters		"Araç çubuğu düğmeleri için SVG renkleri kullan">
