--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -112,7 +112,8 @@
 <!ENTITY Ctr_hide_bf_popup	"鼠标按下时隐藏历史菜单">
 <!ENTITY Ctr_bf_space		"减少按钮之间的空白 (如果可以)">
 <!ENTITY Ctr_noconicons		"页面右键菜单: 使用标签来替代图标 (后退, 前进...)">
-<!ENTITY Ctr_altoptionsp	"选项页面(about:preferences): 备选的外观">
+<!ENTITY Ctr_altoptionsd	"选项页面 (about:preferences): default appearance">
+<!ENTITY Ctr_altoptionsp	"选项页面 (about:preferences): 备选的外观">
 <!ENTITY Ctr_altoptionsw	"在窗口中打开选项页面(about:preferences)">
 <!ENTITY Ctr_svgfilters		"默认工具栏图标使用的SVG颜色">
 <!ENTITY Ctr_wincontrols	"全屏窗口控制按钮可以移动">
