--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -112,7 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Ukryj menu historii po naciśnięciu przycisku myszki">
 <!ENTITY Ctr_bf_space		"Zmniejsz odstęp pomiędzy przyciskami (jeżeli możliwe)">
 <!ENTITY Ctr_noconicons		"Zastąp etykietami ikony menu kontekstowego strony (wstecz, do przodu, zatrzymaj, odśwież, dodaj zakładkę)">
-<!ENTITY Ctr_altoptionsd	"Strona opcji (about:preferences): default appearance">
+<!ENTITY Ctr_altoptionsd	"Strona opcji (about:preferences): domyślny wygląd">
 <!ENTITY Ctr_altoptionsp	"Strona opcji (about:preferences): alternatywny wygląd">
 <!ENTITY Ctr_altoptionsw	"Otwieraj w oknie stronę ustawień (about:preferences)">
 <!ENTITY Ctr_svgfilters		"Kolory SVG ikon przycisków domyślnego paska narzędzi">
