--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -112,7 +112,7 @@
 <!ENTITY Ctr_hide_bf_popup	"Hiirega klõpsates peida nupu ajaloo hüpikmenüü">
 <!ENTITY Ctr_bf_space		"Vähenda nuppudevahelist tühimikku (kui võimalik)">
 <!ENTITY Ctr_noconicons		"Lehe kontekstimenüü: asenda ikoonid tekstiga (tagasi, edasi...)">
-<!ENTITY Ctr_altoptionsd	"Sätete leht (about:preferences): default appearance">
+<!ENTITY Ctr_altoptionsd	"Sätete leht (about:preferences): vaikimisi välimus">
 <!ENTITY Ctr_altoptionsp	"Sätete leht (about:preferences): alternatiivne välimus">
 <!ENTITY Ctr_altoptionsw	"Ava sätete leht (about:preferences) aknas">
 <!ENTITY Ctr_svgfilters		"Kasuta vaikimisi tööriistariba nuppude jaoks SVG-värve">
