--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -13,7 +13,7 @@
 <!ENTITY Ctr_puibseparator	"Separador (para el botón triple barra de menú de panel principal)">
 <!ENTITY Ctr_navthrobber	"Indicador de actividad">
 <!ENTITY Ctr_sidebarbutton	"Barra lateral">
-<!ENTITY Ctr_windowcontrols	"Min/max/cerrar (pantalla completa)">
+<!ENTITY Ctr_windowcontrols	"Min/Max/Cerrar (pantalla completa)">
 <!ENTITY Ctr_rr				"¡Requiere reiniciar &brandShortName;!">
 
 <!ENTITY Ctr_cuibuttons		"Botones">
@@ -112,13 +112,13 @@
 <!ENTITY Ctr_hide_bf_popup	"Ocultar menú de historial de estos botones al pulsarlos con el ratón">
 <!ENTITY Ctr_bf_space		"Reducir espacio entre estos botones (si es posible)">
 <!ENTITY Ctr_noconicons		"Menú contextual de la página: Reemplazar iconos con etiquetas (Anterior, Siguiente...)">
-<!ENTITY Ctr_altoptionsd	"Página de opciones (about:preferences): default appearance">
+<!ENTITY Ctr_altoptionsd	"Página de opciones (about:preferences): Apariencia predeterminada">
 <!ENTITY Ctr_altoptionsp	"Página de opciones (about:preferences): Apariencia alternativa">
 <!ENTITY Ctr_altoptionsw	"Abrir página de opciones (about:preferences) en una ventana">
 <!ENTITY Ctr_svgfilters		"Colores SVG para iconos predeterminados de botones de barra de herramientas">
 <!ENTITY Ctr_wincontrols	"Controles de ventana móviles en pantalla completa">
-<!ENTITY Ctr_oldtoplevimg	"'Top level domain' images: classic appearance">
-<!ENTITY Ctr_altalertbox	"'Alert box': alternative appearance">
+<!ENTITY Ctr_oldtoplevimg	"Imágenes de 'dominio de primer nivel': Apariencia clásica">
+<!ENTITY Ctr_altalertbox	"'Recuadro de alerta': Apariencia alternativa">
 <!ENTITY Ctr_emptyfavicon2	"Reemplazar favicon genérico (vacío y punteado) con uno de hoja en blanco">
 <!ENTITY Ctr_mstatusbar		"Mostrar panel móvil de la antigua barra de estado">
 <!ENTITY Ctr_mstatusbars4e	"El panel de barra de estado está controlado por 'Status-4-Evar'">
@@ -127,11 +127,11 @@
 <!ENTITY Ctr_mstatusbarabr	"El panel de barra de estado está controlado por 'The Addon Bar (Restored)'">
 <!ENTITY Ctr_combrelstop	"Combinar botones Parar-Recargar">
 <!ENTITY Ctr_stoprel1		"Importante: ¡Sitúe el botón Recargar después del botón Parar!">
-<!ENTITY Ctr_panelmenucol	"Menús tipo panel: Color de fondo alternativo">
+<!ENTITY Ctr_panelmenucol	"Menús emergentes de panel: Color de fondo alternativo">
 <!ENTITY Ctr_hideprivmask	"Navegación privada: Ocultar indicador de máscara">
-<!ENTITY Ctr_navsmallicons	"Small icons">
-<!ENTITY Ctr_navlargeicons	"Large icons">
-<!ENTITY Ctr_nbisizedelay	"ms de retardo en la ejecución (1000 ms = 1 seg)">
+<!ENTITY Ctr_navsmallicons	"Iconos pequeños">
+<!ENTITY Ctr_navlargeicons	"Iconos grandes">
+<!ENTITY Ctr_nbisizedelay	"ms de retardo de la activación al inicio (1000 ms = 1 seg)">
 <!ENTITY Ctr_findbar		"Posición de la barra de búsqueda en la ventana">
 <!ENTITY Ctr_findbar_def	"Abajo (predeterminada)">
 <!ENTITY Ctr_findbar_top	"Arriba">
@@ -146,16 +146,16 @@
 <!ENTITY Ctr_cpanelmenus	"Menús tipo panel (botones de Historial, triple barra, etc.): Vista compacta">
 <!ENTITY Ctr_hidezoomres	"Controles de zoom en la barra de herramientas: Ocultar botón de restablecimiento del zoom">
 <!ENTITY Ctr_alt_newtabp	"Página de nueva pestaña (about:newtab): Apariencia alternativa">
-<!ENTITY Ctr_ctroldsearch	"Búsqueda antigua (experimental)">
+<!ENTITY Ctr_ctroldsearch	"Menú antiguo del cuadro de búsqueda (experimental)">
 <!ENTITY Ctr_addonmanager	"Administrador de complementos">
-<!ENTITY Ctr_alt_addonsp	"Página 'más información' de los complementos: Apariencia alternativa">
+<!ENTITY Ctr_alt_addonsp	"Página 'más información': Apariencia alternativa">
 <!ENTITY Ctr_alt_addonsm	"Apariencia alternativa">
-<!ENTITY Ctr_am_nowarning	"Ocultar advertencias en la lista de complementos">
+<!ENTITY Ctr_am_nowarning	"Ocultar advertencias en las listas de complementos">
 <!ENTITY Ctr_am_compact		"Listas de complementos: Vista compacta">
 <!ENTITY Ctr_am_compact2	"Vista compacta +">
 <!ENTITY Ctr_addonversion	"Mostrar la versión del complemento">
 <!ENTITY Ctr_xpinstallui	"Antiguo cuadro de instalación de complementos (... >> xpinstall.customConfirmationUI)">
-<!ENTITY Ctr_bmbutpanelm	"Botón de menú Marcadores (≠ barra lateral): Estilo de panel de menú">
+<!ENTITY Ctr_bmbutpanelm	"Botón de menú Marcadores (≠ barra lateral): Estilo de menú emergente de panel">
 <!ENTITY Ctr_bmbutnotext	"Botón de menú Marcadores (≠ barra lateral): Ocultar etiqueta en la barra de marcadores">
 <!ENTITY Ctr_skipprintpr	"Botón Imprimir: Omitir previsualización de la impresión">
 <!ENTITY Ctr_tbconmenu		"Menú contextual de barra de herramientas: Ocultar 'Mover al menú', 'Eliminar de la barra de herramientas', 'Recargar todas las pestañas', 'Añadir pestañas a marcadores...' y 'Deshacer el cierre de la última pestaña'">
@@ -178,7 +178,7 @@
 
 <!ENTITY Ctr_tab_tf_info1	"Están soportadas entradas de nombres de colores, códigos hexadecimales, y valores rgb(a) y hsl(a).">
 <!ENTITY Ctr_tab_tf_info2	"¡Las entradas no serán validadas!">
-<!ENTITY Ctr_tabact_t		"activa">
+<!ENTITY Ctr_tabact_t		"seleccionada">
 <!ENTITY Ctr_tabhov_t		"señalada">
 <!ENTITY Ctr_tabnor_t		"predeterminada">
 <!ENTITY Ctr_tabpen_t		"no cargada">
@@ -189,7 +189,7 @@
 <!ENTITY Ctr_ctextsh		"Sombreado del texto">
 <!ENTITY Ctr_tabnor			"Pestaña por defecto">
 <!ENTITY Ctr_tabhov			"Pestaña señalada">
-<!ENTITY Ctr_tabact			"Pestaña activa">
+<!ENTITY Ctr_tabact			"Pestaña seleccionada">
 <!ENTITY Ctr_tabpen			"Pestaña no cargada">
 <!ENTITY Ctr_tabunr			"Pestaña no leída">
 <!ENTITY Ctr_ntabnor		"Nueva pestaña predeterminada">
@@ -201,17 +201,17 @@
 
 <!ENTITY Ctr_urlbar			"Barra de direcciones">
 <!ENTITY Ctr_starinurl		"Botón estrella de marcador">
-<!ENTITY Ctr_starinurlinfo	"Suprime botón dual de marcadores de barra de herramientas">
+<!ENTITY Ctr_starinurlinfo	"Suprime el botón dual de marcadores de la barra de herramientas">
 <!ENTITY Ctr_feedinurl		"Botón de suscripción (RSS feed)">
 <!ENTITY Ctr_hideurelstop	"Ocultar botones 'Parar y Recargar'">
 <!ENTITY Ctr_hideurlgo		"Ocultar botón 'Ir'">
 <!ENTITY Ctr_hideurlsrg		"Ocultar separadores y espacios del botón 'Recargar, Parar e Ir'">
 <!ENTITY Ctr_urlbardropm	"Mover flecha de despliegue al final de la barra de URL">
-<!ENTITY Ctr_altreaderico	"Alternative 'Reader' icons">
+<!ENTITY Ctr_altreaderico	"Iconos de 'Vista de lectura' alternativos">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando se bloquee una ventana emergente">
 <!ENTITY Ctr_urlbar_ib		"Botón de identidad del sitio (recuadro de identidad)">
-<!ENTITY Ctr_ib_nohovcolor	"Do not show gray color when hovered">
-<!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
+<!ENTITY Ctr_ib_nohovcolor	"No mostrar color gris al señalarlo">
+<!ENTITY Ctr_verifiedcolors	"Colores de botón para sitios web verificados, conexiones seguras y no seguras">
 <!ENTITY Ctr_faviconurl		"Mostrar favicon del sitio web">
 <!ENTITY Ctr_padlock		"Candado para conexiones seguras">
 <!ENTITY Ctr_padlock_hid	"oculto">
@@ -227,7 +227,7 @@
 <!ENTITY Ctr_extrabar1		"Barra de herramientas adicional">
 <!ENTITY Ctr_extrabarinfo	"Cambiar aleatoriamente entre los modos 'tabs on top' (pestañas arriba) y 'tabs not on top' (pestañas no arriba) altera el orden de las barras de herramientas adicionales. &brandShortName; ha de reiniciarse para resolver el problema.">
 
-<!ENTITY Ctr_invicons		"Iconos invertidos">
+<!ENTITY Ctr_invicons		"Iconos en negativo">
 <!ENTITY Ctr_menubar		"Barra de menús">
 <!ENTITY Ctr_tabstoolbar	"Barra de pestañas">
 <!ENTITY Ctr_navbar			"Barra de navegación">
@@ -241,7 +241,7 @@
 <!ENTITY Ctr_dblclnewtab	"Hacer doble clic abre una 'nueva' pestaña (about:config >> browser.newtab.url)">
 <!ENTITY Ctr_hidetbwot		"Ocultar barra de pestañas con una sola pestaña">
 <!ENTITY Ctr_hidetbwote		"Reducir retardo al ocultar en el inicio">
-<!ENTITY Ctr_hidetbwote_i	"Podría causar fallos en la barra de pestañas">
+<!ENTITY Ctr_hidetbwote_i	"Podría causar problemas en la barra de pestañas">
 <!ENTITY Ctr_hidetbwote2	"Conservar barra de título (pestañas arriba)">
 <!ENTITY Ctr_notabfog		"Eliminar niebla de fondo (Windows Aeroglass/8)">
 <!ENTITY Ctr_notabbg		"Eliminar color de fondo (Windows AeroGlass/8)">
@@ -294,12 +294,12 @@
 <!ENTITY Ctr_otherctroptns	"Otras configuraciones">
 <!ENTITY Ctr_cuibotbuttons	"Botones extra en el modo 'Personalizar'">
 <!ENTITY Ctr_bookmarkoinpw	"Elemento 'Abrir en una nueva ventana privada' en el menú contextual de marcadores">
-<!ENTITY Ctr_nodevtheme		"Prevenir que se habilite el 'tema de decoración de desarrollador'">
+<!ENTITY Ctr_nodevtheme		"Evitar que se habilite el 'tema de decoración de desarrollador'">
 
 <!ENTITY Ctr_experttweaks	"Avanzadas">
-<!ENTITY Ctr_fx34search		"Desmarcar esto retira la 'nueva apariencia de búsqueda' y devuelve la antigua.">
+<!ENTITY Ctr_fx34search		"Desmarcar esto retira la 'nueva apariencia de búsqueda' y recupera la antigua.">
 <!ENTITY Ctr_fx34loop		"Desmarcar esto retira las características de 'llamada y conversación' (Hello).">
-<!ENTITY Ctr_fx35devtheme	"Desmarcar esto deshabilita el 'tema de decoración de desarrollador'.">
+<!ENTITY Ctr_fx35devtheme	"Desmarcar esto deshabilita la decoración del 'tema de desarrollador'.">
 <!ENTITY Ctr_fx36prefs		"Desmarcar esto restaura la antigua ventana de Opciones en lugar de la actual pestaña.">
 <!ENTITY Ctr_fx36prefs2		"¡La ventana antigua no contiene todas las preferencias del navegador añadidas recientemente!">
 <!ENTITY Ctr_fx38reader		"Desmarcar esto deshabilita la 'vista de lectura' y elimina su icono.">
