--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_sidebarbutton	"(Sidepanel)">
 <!ENTITY Ctr_windowcontrols	"Minimere/maksimere/luk (Fuldskærm)">
 <!ENTITY Ctr_rr				"Genstart påkrævet!">
+<!ENTITY Ctr_window			"window">
 
 <!ENTITY Ctr_cuibuttons		"Knapper">
 <!ENTITY Ctr_cuibutnormal	"Standard">
