--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_sidebarbutton	"(Sidebar)">
 <!ENTITY Ctr_windowcontrols	"Min/max/close (Fullscreen)">
 <!ENTITY Ctr_rr				"Restart required!">
+<!ENTITY Ctr_window			"window">
 
 <!ENTITY Ctr_cuibuttons		"Buttons">
 <!ENTITY Ctr_cuibutnormal	"Normal">
