--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_sidebarbutton	"Panneau latéral">
 <!ENTITY Ctr_windowcontrols	"Réduire/Restaurer/Fermer (Plein écran)">
 <!ENTITY Ctr_rr				"Redémarrer &brandShortName;!">
+<!ENTITY Ctr_window			"la fenêtre">
 
 <!ENTITY Ctr_cuibuttons		"Boutons">
 <!ENTITY Ctr_cuibutnormal	"Taille normale">
