--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_sidebarbutton	"(Pasek boczny)">
 <!ENTITY Ctr_windowcontrols	"Minimalizuj, maksymalizuj, zamknij (pełny ekran)">
 <!ENTITY Ctr_rr				"Wymagany restart!">
+<!ENTITY Ctr_window			"okno">
 
 <!ENTITY Ctr_cuibuttons		"Przyciski">
 <!ENTITY Ctr_cuibutnormal	"Normalne">
