--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_sidebarbutton	"Postranní lišta">
 <!ENTITY Ctr_windowcontrols	"Min/max/zavřít (Fullscreen)">
 <!ENTITY Ctr_rr				"Restartujte &brandShortName;!">
+<!ENTITY Ctr_window			"okno">
 
 <!ENTITY Ctr_cuibuttons		"Tlačítka">
 <!ENTITY Ctr_cuibutnormal	"Normální">
