--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_sidebarbutton	"(Külgriba)">
 <!ENTITY Ctr_windowcontrols	"Min/max/sulge (Täisekraan)">
 <!ENTITY Ctr_rr				"Taaskäivitamine vajalik!">
+<!ENTITY Ctr_window			"aken">
 
 <!ENTITY Ctr_cuibuttons		"Nupud">
 <!ENTITY Ctr_cuibutnormal	"Tavalised">
