--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -15,6 +15,7 @@
 <!ENTITY Ctr_sidebarbutton	"(Kenar Çubuğu)">
 <!ENTITY Ctr_windowcontrols	"Min/max/kapat (Tam ekran)">
 <!ENTITY Ctr_rr				"Yeniden başlatma gerekli!">
+<!ENTITY Ctr_window			"window">
 
 <!ENTITY Ctr_cuibuttons		"Butonlar">
 <!ENTITY Ctr_cuibutnormal	"Normal">
