--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -81,7 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Tlačítko v záhlaví okna [&brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Tlačítko v záhlaví okna [&brandShortName;] (hidden)">
 <!ENTITY Ctr_appbutton2io	"Tlačítko v záhlaví okna [&brandShortName;] (pouze ikona)">
-<!ENTITY Ctr_paneluibtweak	"Oranžový panel jako tlačítko na liště s panely">
+<!ENTITY Ctr_paneluibtweak	"Oranžový panel jako tlačítko...">
+<!ENTITY Ctr_paneluibtweak2	"...na liště s panely">
 <!ENTITY Ctr_appbuttonc_o	"Oranžové tlačítko (výchozí)">
 <!ENTITY Ctr_appbuttonc_a	"Modré tlačítko (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Černé tlačítko (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Anonymní prohlížení: skrýt indikátor s maskou">
 <!ENTITY Ctr_navsmallicons	"Malé ikony">
 <!ENTITY Ctr_navlargeicons	"Velké ikony">
-<!ENTITY Ctr_nbisizedelay	"ms prodlevy před spuštěním (1000 ms = 1 sec)">
+<!ENTITY Ctr_nbisizedelay0	"Prodlevy před spuštěním">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Lišta vyhledávání">
 <!ENTITY Ctr_findbar_def	"Výchozí umístění">
 <!ENTITY Ctr_findbar_top	"Nahoře">
