--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -82,6 +82,7 @@
 <!ENTITY Ctr_appbutton2h	"Knap på [&brandShortName;] titellinje (skjul)">
 <!ENTITY Ctr_appbutton2io	"Knap på [&brandShortName;] titellinje (kun ikon)">
 <!ENTITY Ctr_paneluibtweak	"Orange panelmenu-knap på fanebladslinjen">
+<!ENTITY Ctr_paneluibtweak2	" ">
 <!ENTITY Ctr_appbuttonc_o	"Orange knap (standard)">
 <!ENTITY Ctr_appbuttonc_a	"Blå knap (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Sort knap (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Privat browsing: skjul maskeindikator">
 <!ENTITY Ctr_navsmallicons	"Small icons">
 <!ENTITY Ctr_navlargeicons	"Large icons">
-<!ENTITY Ctr_nbisizedelay	"ms forsinkelse (1000 ms = 1 sekund)">
+<!ENTITY Ctr_nbisizedelay0	"Forsinkelse">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekund)">
 <!ENTITY Ctr_findbar		"Placering af søgelinje">
 <!ENTITY Ctr_findbar_def	"Bunden (standard)">
 <!ENTITY Ctr_findbar_top	"Toppen">
