--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -81,7 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Tłocašk na titelowej rědce [&brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Tłocašk na titelowej rědce (schowany)">
 <!ENTITY Ctr_appbutton2io	"Tłocašk na titelowej rědce [&brandShortName;] (jano symbol)">
-<!ENTITY Ctr_paneluibtweak	"Menijowy tłocašk ako nałožeński tłocašk pokazaś, gaž jo na rejtarkowej rědce">
+<!ENTITY Ctr_paneluibtweak	"Menijowy tłocašk ako nałožeński tłocašk pokazaś,...">
+<!ENTITY Ctr_paneluibtweak2	"...gaž jo na rejtarkowej rědce">
 <!ENTITY Ctr_appbuttonc_o	"Tłocaškowa barwa: Oranžowy (standard)">
 <!ENTITY Ctr_appbuttonc_a	"Tłocaškkowa barwa: Módry (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Tłocaškowa barwa: Carny (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Priwatny modus: maskowy pokazowaŕ schowaś">
 <!ENTITY Ctr_navsmallicons	"Małe symbole">
 <!ENTITY Ctr_navlargeicons	"Wjelike symbole">
-<!ENTITY Ctr_nbisizedelay	"Wuwjeźeńske wokomuźenje ms (1000 ms = 1 sekunda)">
+<!ENTITY Ctr_nbisizedelay0	"Wuwjeźeńske wokomuźenje">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekunda)">
 <!ENTITY Ctr_findbar		"Pytańska rědka">
 <!ENTITY Ctr_findbar_def	"Standardna pozicija">
 <!ENTITY Ctr_findbar_top	"Górjejce">
