--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -81,7 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Botón en la barra de título [de &brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Botón en la barra de título [de &brandShortName;] (oculto)">
 <!ENTITY Ctr_appbutton2io	"Botón en la barra de título [de &brandShortName;] (sólo icono)">
-<!ENTITY Ctr_paneluibtweak	"Botón de menú de panel en la barra de pestañas, con estilo botón de la aplicación">
+<!ENTITY Ctr_paneluibtweak	"Botón de menú de panel en la barra de pestañas,...">
+<!ENTITY Ctr_paneluibtweak2	"...con estilo botón de la aplicación">
 <!ENTITY Ctr_appbuttonc_o	"Color de botón naranja (predeterminado)">
 <!ENTITY Ctr_appbuttonc_a	"Color de botón azul (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Color de botón negro (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Navegación privada: Ocultar indicador de máscara">
 <!ENTITY Ctr_navsmallicons	"Iconos pequeños">
 <!ENTITY Ctr_navlargeicons	"Iconos grandes">
-<!ENTITY Ctr_nbisizedelay	"ms de retardo de la activación al inicio (1000 ms = 1 seg)">
+<!ENTITY Ctr_nbisizedelay0	"Ms de retardo de la activación al inicio">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 seg)">
 <!ENTITY Ctr_findbar		"Posición de la barra de búsqueda en la ventana">
 <!ENTITY Ctr_findbar_def	"Abajo (predeterminada)">
 <!ENTITY Ctr_findbar_top	"Arriba">
