--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -82,6 +82,7 @@
 <!ENTITY Ctr_appbutton2h	"Bouton sur la barre de titre [&brandShortName;] (caché)">
 <!ENTITY Ctr_appbutton2io	"Bouton sur la barre de titre [&brandShortName;] (icône seule)">
 <!ENTITY Ctr_paneluibtweak	"Bouton orange sur la barre d'onglets">
+<!ENTITY Ctr_paneluibtweak2	" ">
 <!ENTITY Ctr_appbuttonc_o	"Bouton orange (par défaut)">
 <!ENTITY Ctr_appbuttonc_a	"Bouton bleu (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Bouton noir (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Navigation privée : ne pas afficher l'icône 'masque'">
 <!ENTITY Ctr_navsmallicons	"Petites icônes">
 <!ENTITY Ctr_navlargeicons	"Grandes icônes">
-<!ENTITY Ctr_nbisizedelay	"Délai avant exécution en ms (1000 ms = 1 sec)">
+<!ENTITY Ctr_nbisizedelay0	"Délai avant exécution en ms">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Barre de recherche">
 <!ENTITY Ctr_findbar_def	"Position par défaut">
 <!ENTITY Ctr_findbar_top	"En haut">
