--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -81,7 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Tłóčatko na titulnej lajsće [&brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Tłóčatko na titulnej lajsće [&brandShortName;] (schowane)">
 <!ENTITY Ctr_appbutton2io	"Tłóčatko na titulnej lajsće [&brandShortName;] (jenož symbol)">
-<!ENTITY Ctr_paneluibtweak	"Menijowe tłóčatko jako nałoženske tłóčatko pokazać, hdyž je na rajtarkowej lajsće">
+<!ENTITY Ctr_paneluibtweak	"Menijowe tłóčatko jako nałoženske tłóčatko pokazać,...">
+<!ENTITY Ctr_paneluibtweak2	"...hdyž je na rajtarkowej lajsće">
 <!ENTITY Ctr_appbuttonc_o	"Tłóčatkowa barba: Oranžowy (standard)">
 <!ENTITY Ctr_appbuttonc_a	"Tłóčatkowa barba: Módry (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Tłóčatkowa barba: Čorny (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Priwatny modus: maskowy pokazowar schować">
 <!ENTITY Ctr_navsmallicons	"Małe symbole">
 <!ENTITY Ctr_navlargeicons	"Wulke symbole">
-<!ENTITY Ctr_nbisizedelay	"Komdźenje wuwjedźenja w ms (1000 ms = 1 sekunda)">
+<!ENTITY Ctr_nbisizedelay0	"Komdźenje wuwjedźenja w ms">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekunda)">
 <!ENTITY Ctr_findbar		"Pytanska lajsta">
 <!ENTITY Ctr_findbar_def	"Standardna pozicija">
 <!ENTITY Ctr_findbar_top	"Horjeka">
