--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -81,7 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Botão na Barra de Título [&brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Botão na Barra de Título [&brandShortName;] (Oculto)">
 <!ENTITY Ctr_appbutton2io	"Botão na Barra de Título [&brandShortName;] (Só o Ícone)">
-<!ENTITY Ctr_paneluibtweak	"Botão do Menu do Painel na Barra de Abas na Cor Laranja">
+<!ENTITY Ctr_paneluibtweak	"Botão do Menu do Painel...">
+<!ENTITY Ctr_paneluibtweak2	"...na Barra de Abas na Cor Laranja">
 <!ENTITY Ctr_appbuttonc_o	"Botão Laranja (Padrão)">
 <!ENTITY Ctr_appbuttonc_a	"Botão Azul (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Botão Preto (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Navegação Particular: Ocultar o Indicador da Máscara">
 <!ENTITY Ctr_navsmallicons	"Small icons">
 <!ENTITY Ctr_navlargeicons	"Large icons">
-<!ENTITY Ctr_nbisizedelay	"Atraso (em msegs.) na Execução (1000 msegs. = 1 seg.)">
+<!ENTITY Ctr_nbisizedelay0	"Atraso (em msegs.) na Execução">
+<!ENTITY Ctr_nbisizedelay	"msegs. (1000 msegs. = 1 seg.)">
 <!ENTITY Ctr_findbar		"Barra de Pesquisas">
 <!ENTITY Ctr_findbar_def	"Posição Padrão">
 <!ENTITY Ctr_findbar_top	"Posição no Topo">
