--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -82,6 +82,7 @@
 <!ENTITY Ctr_appbutton2h	"в панели заголовка (скрыта)">
 <!ENTITY Ctr_appbutton2io	"в панели заголовка (только значки)">
 <!ENTITY Ctr_paneluibtweak	"Оранжевая кнопка меню на панели вкладок">
+<!ENTITY Ctr_paneluibtweak2	" ">
 <!ENTITY Ctr_appbuttonc_o	"Оранжевая кнопка (по умолчанию)">
 <!ENTITY Ctr_appbuttonc_a	"Синяя кнопка (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Чёрная кнопка (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Приватный просмотр: скрыть значок маски">
 <!ENTITY Ctr_navsmallicons	"Мелкие значки">
 <!ENTITY Ctr_navlargeicons	"Большие значки">
-<!ENTITY Ctr_nbisizedelay	"мс, задержка выполнения (1000 мс = 1 сек)">
+<!ENTITY Ctr_nbisizedelay0	"Задержка выполнения">
+<!ENTITY Ctr_nbisizedelay	"мс (1000 мс = 1 сек)">
 <!ENTITY Ctr_findbar		"Панель поиска">
 <!ENTITY Ctr_findbar_def	"Положение по умолчанию">
 <!ENTITY Ctr_findbar_top	"вверху">
