--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -81,7 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Gumb na nazivni vrstici [&brandShortName;a]">
 <!ENTITY Ctr_appbutton2h	"Gumb na nazivni vrstici [&brandShortName;a] (skrit)">
 <!ENTITY Ctr_appbutton2io	"Gumb na nazivni vrstici [&brandShortName;a] (samo ikona)">
-<!ENTITY Ctr_paneluibtweak	"Oranžni gumb ploščastega menija na orodni vrstici zavihkov">
+<!ENTITY Ctr_paneluibtweak	"Oranžni gumb ploščastega menija...">
+<!ENTITY Ctr_paneluibtweak2	"...na orodni vrstici zavihkov">
 <!ENTITY Ctr_appbuttonc_o	"Oranžna barva gumba (privzeto)">
 <!ENTITY Ctr_appbuttonc_a	"Modra barva gumba (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Črna barva gumba (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Zasebno brskanje: skrij kazalnik maskiranja">
 <!ENTITY Ctr_navsmallicons	"Majhne ikone">
 <!ENTITY Ctr_navlargeicons	"Velike ikone">
-<!ENTITY Ctr_nbisizedelay	"Zakasnitev izvajanja v ms (1000 ms = 1 sec)">
+<!ENTITY Ctr_nbisizedelay0	"Zakasnitev izvajanja v ms">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Položaj iskalne vrstice">
 <!ENTITY Ctr_findbar_def	"Spodaj (privzeto)">
 <!ENTITY Ctr_findbar_top	"Zgoraj">
