--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -82,6 +82,7 @@
 <!ENTITY Ctr_appbutton2h	"Кнопка на [&brandShortName;] панелі заголовку (прихована)">
 <!ENTITY Ctr_appbutton2io	"Кнопка на [&brandShortName;] панелі заголовку (тільки іконка)">
 <!ENTITY Ctr_paneluibtweak	"Оранжева кнопка меню на панелі вкладок">
+<!ENTITY Ctr_paneluibtweak2	" ">
 <!ENTITY Ctr_appbuttonc_o	"Оранжева кнопка (типово)">
 <!ENTITY Ctr_appbuttonc_a	"Синя кнопка (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Чорна кнопка (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Приватний огляд: приховати індикатор маски">
 <!ENTITY Ctr_navsmallicons	"Малі іконки">
 <!ENTITY Ctr_navlargeicons	"Великі іконки">
-<!ENTITY Ctr_nbisizedelay	"мс затримка виконання (1000 мс = 1 сек)">
+<!ENTITY Ctr_nbisizedelay0	"Затримка виконання">
+<!ENTITY Ctr_nbisizedelay	"мс (1000 мс = 1 сек)">
 <!ENTITY Ctr_findbar		"Панель пошуку">
 <!ENTITY Ctr_findbar_def	"Типова позиція">
 <!ENTITY Ctr_findbar_top	"Нагорі">
