--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -81,7 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Button on [&brandShortName;] titlebar">
 <!ENTITY Ctr_appbutton2h	"Button on [&brandShortName;] titlebar (hidden)">
 <!ENTITY Ctr_appbutton2io	"Button on [&brandShortName;] titlebar (icon only)">
-<!ENTITY Ctr_paneluibtweak	"Display main panel menu button as appbutton when on tabs toolbar">
+<!ENTITY Ctr_paneluibtweak	"Display main panel menu button as appbutton...">
+<!ENTITY Ctr_paneluibtweak2	"...when on tabs toolbar">
 <!ENTITY Ctr_appbuttonc_o	"Orange button color (default)">
 <!ENTITY Ctr_appbuttonc_a	"Blue button color (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Black button color (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Private browsing: hide mask indicator">
 <!ENTITY Ctr_navsmallicons	"Small icons">
 <!ENTITY Ctr_navlargeicons	"Large icons">
-<!ENTITY Ctr_nbisizedelay	"ms - initialization delay on browser startup (1000 ms = 1 sec)">
+<!ENTITY Ctr_nbisizedelay0	"Initialization delay on browser startup">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Findbar position">
 <!ENTITY Ctr_findbar_def	"Bottom (default)">
 <!ENTITY Ctr_findbar_top	"Top">
