--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -82,6 +82,7 @@
 <!ENTITY Ctr_appbutton2h	"Nupp [&brandShortName;]i tiitliribal (peidetud)">
 <!ENTITY Ctr_appbutton2io	"Nupp [&brandShortName;]i tiitliribal (ainult ikoon)">
 <!ENTITY Ctr_paneluibtweak	"Oranž paneelimenüü nupp kaartide ribal">
+<!ENTITY Ctr_paneluibtweak2	" ">
 <!ENTITY Ctr_appbuttonc_o	"Oranži värvi nupp (vaikimisi)">
 <!ENTITY Ctr_appbuttonc_a	"Sinist värvi nupp (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Musta värvi nupp (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Privaatne veebilehitsemine: peida maski kujutis">
 <!ENTITY Ctr_navsmallicons	"Väiksed ikoonid">
 <!ENTITY Ctr_navlargeicons	"Suured ikoonid">
-<!ENTITY Ctr_nbisizedelay	"ms - täitmise viivitus brauseri käivitumisel (1000 ms = 1 sekund)">
+<!ENTITY Ctr_nbisizedelay0	"Täitmise viivitus brauseri käivitumisel">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sekund)">
 <!ENTITY Ctr_findbar		"Otsinguriba asukoht">
 <!ENTITY Ctr_findbar_def	"All (vaikimisi)">
 <!ENTITY Ctr_findbar_top	"Üleval">
