--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -81,7 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Pulsante nella barra del titolo">
 <!ENTITY Ctr_appbutton2h	"Pulsante nella barra del titolo (nascosto)">
 <!ENTITY Ctr_appbutton2io	"Pulsante nella barra del titolo (solo icona)">
-<!ENTITY Ctr_paneluibtweak	"Stile pulsante per il pannello dei menu quando è nella barra delle schede">
+<!ENTITY Ctr_paneluibtweak	"Stile pulsante per il pannello dei menu quando...">
+<!ENTITY Ctr_paneluibtweak2	"...è nella barra delle schede">
 <!ENTITY Ctr_appbuttonc_o	"Pulsante arancione (predefinito)">
 <!ENTITY Ctr_appbuttonc_a	"Pulsante blu (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Pulsante nero (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Nascondi indicatore modalità di Navigazione anonima">
 <!ENTITY Ctr_navsmallicons	"Icone piccole">
 <!ENTITY Ctr_navlargeicons	"Icone grandi">
-<!ENTITY Ctr_nbisizedelay	"ritardo esecuzione in ms (1000 ms = 1 sec)">
+<!ENTITY Ctr_nbisizedelay0	"Ritardo esecuzione in ms">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Posizione della barra di ricerca nel testo">
 <!ENTITY Ctr_findbar_def	"Posizione predefinita">
 <!ENTITY Ctr_findbar_top	"In alto">
