--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -81,7 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Przycisk na pasku narzędzi [&brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Przycisk na pasku narzędzi [&brandShortName;] (ukryty)">
 <!ENTITY Ctr_appbutton2io	"Przycisk na pasku narzędzi [&brandShortName;] (tylko ikona)">
-<!ENTITY Ctr_paneluibtweak	"Pomarańczowy przycisk menu panelu na pasku kart">
+<!ENTITY Ctr_paneluibtweak	"Pomarańczowy przycisk menu panelu...">
+<!ENTITY Ctr_paneluibtweak2	"...na pasku kart">
 <!ENTITY Ctr_appbuttonc_o	"Pomarańczowy kolor przycisku (domyślny)">
 <!ENTITY Ctr_appbuttonc_a	"Błękitny kolor przycisku (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Czarny kolor przycisku (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Prywatne przeglądanie: ukryj wskaźnik-maskę">
 <!ENTITY Ctr_navsmallicons	"Małe ikony">
 <!ENTITY Ctr_navlargeicons	"Duże ikony">
-<!ENTITY Ctr_nbisizedelay	"ms opóźnienia wykonania (1000 ms = 1 s)">
+<!ENTITY Ctr_nbisizedelay0	"Ms opóźnienia wykonania">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 s)">
 <!ENTITY Ctr_findbar		"Pozycja paska wyszukiwania">
 <!ENTITY Ctr_findbar_def	"Dolna (domyślna)">
 <!ENTITY Ctr_findbar_top	"Górna">
@@ -296,7 +298,6 @@
 <!ENTITY Ctr_cuibotbuttons	"Dodatkowe przyciski w trybie 'dostosowywania'">
 <!ENTITY Ctr_bookmarkoinpw	"Pozycja 'Otwórz w nowym oknie prywatnym' w menu kontekstowym zakładek">
 <!ENTITY Ctr_nodevtheme		"Zapobiegaj włączeniu 'Motyw Edycji Deweloperskiej'">
-
 
 <!ENTITY Ctr_experttweaks	"Zaawansowane">
 <!ENTITY Ctr_fx34search		"Odznaczenie tego ustawienia usuwa 'nowy wygląd wyszukiwania' i przywraca stary.">
