--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -81,7 +81,8 @@
 <!ENTITY Ctr_appbutton2		"[&brandShortName;] başlığında buton">
 <!ENTITY Ctr_appbutton2h	"Araç çubuğunda [&brandShortName;] butonu(saklı)">
 <!ENTITY Ctr_appbutton2io	"[&brandShortName;] başlığında buton (sadece ikon)">
-<!ENTITY Ctr_paneluibtweak	"Sekme çubuğunda turuncu panel menü butonu">
+<!ENTITY Ctr_paneluibtweak	"Sekme çubuğunda turuncu panel...">
+<!ENTITY Ctr_paneluibtweak2	"...menü butonu">
 <!ENTITY Ctr_appbuttonc_o	"Turuncu renk butonu">
 <!ENTITY Ctr_appbuttonc_a	"Mavi renk butonu (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Siyah renk butonu (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"Gizli gezinme: maske göstergesini gizle">
 <!ENTITY Ctr_navsmallicons	"Small icons">
 <!ENTITY Ctr_navlargeicons	"Large icons">
-<!ENTITY Ctr_nbisizedelay	"ms - initialization delay on browser startup (1000 ms = 1 sec)">
+<!ENTITY Ctr_nbisizedelay0	"Initialization delay on browser startup">
+<!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 sec)">
 <!ENTITY Ctr_findbar		"Arama çubuğu">
 <!ENTITY Ctr_findbar_def	"Arama çubuğu (varsayılan pozisyon)">
 <!ENTITY Ctr_findbar_top	"Üst">
