--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -82,6 +82,7 @@
 <!ENTITY Ctr_appbutton2h	"在 [&brandShortName;] 标题栏上显示 (隐藏)">
 <!ENTITY Ctr_appbutton2io	"在 [&brandShortName;] 标题栏上显示 (仅图标)">
 <!ENTITY Ctr_paneluibtweak	"在标签页栏上显示橙色面板菜单按钮">
+<!ENTITY Ctr_paneluibtweak2	" ">
 <!ENTITY Ctr_appbuttonc_o	"橙色按钮 (默认)">
 <!ENTITY Ctr_appbuttonc_a	"蓝色按钮 (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"黑色按钮 (Nightly)">
@@ -132,7 +133,8 @@
 <!ENTITY Ctr_hideprivmask	"隐私浏览: 隐藏面具标志">
 <!ENTITY Ctr_navsmallicons	"小图标">
 <!ENTITY Ctr_navlargeicons	"大图标">
-<!ENTITY Ctr_nbisizedelay	"执行时延迟的毫秒数 (1000 毫秒 = 1 秒)">
+<!ENTITY Ctr_nbisizedelay0	"执行时延迟的毫秒数">
+<!ENTITY Ctr_nbisizedelay	"毫秒 (1000 毫秒 = 1 秒)">
 <!ENTITY Ctr_findbar		"查找栏位置">
 <!ENTITY Ctr_findbar_def	"底部(默认)">
 <!ENTITY Ctr_findbar_top	"顶部">
