--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -81,8 +81,8 @@
 <!ENTITY Ctr_appbutton2		"Przycisk na pasku narzędzi [&brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Przycisk na pasku narzędzi [&brandShortName;] (ukryty)">
 <!ENTITY Ctr_appbutton2io	"Przycisk na pasku narzędzi [&brandShortName;] (tylko ikona)">
-<!ENTITY Ctr_paneluibtweak	"Pomarańczowy przycisk menu panelu...">
-<!ENTITY Ctr_paneluibtweak2	"...na pasku kart">
+<!ENTITY Ctr_paneluibtweak	"Wyświetlaj przycisk menu głównego panelu jako...">
+<!ENTITY Ctr_paneluibtweak2	"... przycisk aplikacji gdy na pasku kart">
 <!ENTITY Ctr_appbuttonc_o	"Pomarańczowy kolor przycisku (domyślny)">
 <!ENTITY Ctr_appbuttonc_a	"Błękitny kolor przycisku (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Czarny kolor przycisku (Nightly)">
@@ -133,7 +133,7 @@
 <!ENTITY Ctr_hideprivmask	"Prywatne przeglądanie: ukryj wskaźnik-maskę">
 <!ENTITY Ctr_navsmallicons	"Małe ikony">
 <!ENTITY Ctr_navlargeicons	"Duże ikony">
-<!ENTITY Ctr_nbisizedelay0	"Ms opóźnienia wykonania">
+<!ENTITY Ctr_nbisizedelay0	"Opóźnienie inicjalizacji po uruchomieniu przeglądarki">
 <!ENTITY Ctr_nbisizedelay	"ms (1000 ms = 1 s)">
 <!ENTITY Ctr_findbar		"Pozycja paska wyszukiwania">
 <!ENTITY Ctr_findbar_def	"Dolna (domyślna)">
