--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -13,7 +13,7 @@
 <!ENTITY Ctr_puibseparator	"Linia podziału na przycisku menu">
 <!ENTITY Ctr_navthrobber	"Wskaźnik aktywności">
 <!ENTITY Ctr_sidebarbutton	"(Pasek boczny)">
-<!ENTITY Ctr_windowcontrols	"Minimalizuj, maksymalizuj, zamknij (pełny ekran)">
+<!ENTITY Ctr_windowcontrols	"Minimalizuj, Maksymalizuj, Zamknij (pełny ekran)">
 <!ENTITY Ctr_rr				"Wymagany restart!">
 <!ENTITY Ctr_window			"okno">
 
@@ -59,7 +59,7 @@
 <!ENTITY Ctr_tabinsertion	"Wstaw powiązaną kartę za kartą bieżącą (about:config)">
 <!ENTITY Ctr_emptyfavicon	"Przywróć pustą ikonę ulubionych (jeżeli strona nie zaoferuje żadnej)">
 <!ENTITY Ctr_noemptypticon	"Usuń pustą ikonę ulubionych z przypiętej karty">
-<!ENTITY Ctr_e10stab_notd	"Karty E10s: usuń podkreślenie">
+<!ENTITY Ctr_e10stab_notd	"Karty E10s: Usuń podkreślenie">
 <!ENTITY Ctr_closetab_0		"Przycisk zamknięcia karty">
 <!ENTITY Ctr_closetab_1		"Tylko na aktywnej karcie">
 <!ENTITY Ctr_closetab_2		"Nigdzie">
@@ -82,7 +82,7 @@
 <!ENTITY Ctr_appbutton2h	"Przycisk na pasku narzędzi [&brandShortName;] (ukryty)">
 <!ENTITY Ctr_appbutton2io	"Przycisk na pasku narzędzi [&brandShortName;] (tylko ikona)">
 <!ENTITY Ctr_paneluibtweak	"Wyświetlaj przycisk menu głównego panelu jako...">
-<!ENTITY Ctr_paneluibtweak2	"... przycisk aplikacji gdy na pasku kart">
+<!ENTITY Ctr_paneluibtweak2	"... przycisk aplikacji, gdy na pasku kart">
 <!ENTITY Ctr_appbuttonc_o	"Pomarańczowy kolor przycisku (domyślny)">
 <!ENTITY Ctr_appbuttonc_a	"Błękitny kolor przycisku (Aurora)">
 <!ENTITY Ctr_appbuttonc_n	"Czarny kolor przycisku (Nightly)">
@@ -113,14 +113,14 @@
 <!ENTITY Ctr_nbcompact		"Zmniejsz wysokość paska nawigacji">
 <!ENTITY Ctr_hide_bf_popup	"Ukryj menu historii po naciśnięciu przycisku myszki">
 <!ENTITY Ctr_bf_space		"Zmniejsz odstęp pomiędzy przyciskami (jeżeli możliwe)">
-<!ENTITY Ctr_noconicons		"Zastąp etykietami ikony menu kontekstowego strony (wstecz, do przodu, zatrzymaj, odśwież, dodaj zakładkę)">
-<!ENTITY Ctr_altoptionsd	"Strona opcji (about:preferences): domyślny wygląd">
-<!ENTITY Ctr_altoptionsp	"Strona opcji (about:preferences): alternatywny wygląd">
+<!ENTITY Ctr_noconicons		"Zastąp etykietami ikony menu kontekstowego strony (Wstecz, Do przodu, Zatrzymaj, Odśwież, Dodaj zakładkę)">
+<!ENTITY Ctr_altoptionsd	"Strona opcji (about:preferences): Domyślny wygląd">
+<!ENTITY Ctr_altoptionsp	"Strona opcji (about:preferences): Alternatywny wygląd">
 <!ENTITY Ctr_altoptionsw	"Otwieraj w oknie stronę ustawień (about:preferences)">
 <!ENTITY Ctr_svgfilters		"Kolory SVG ikon przycisków domyślnego paska narzędzi">
 <!ENTITY Ctr_wincontrols	"Ruchome kontrolki okna pełnego ekranu">
-<!ENTITY Ctr_oldtoplevimg	"Obrazy 'domeny najwyższego poziomu': klasyczny wygląd">
-<!ENTITY Ctr_altalertbox	"'Pole ostrzeżenia': alternatywny wygląd">
+<!ENTITY Ctr_oldtoplevimg	"Obrazy 'domeny najwyższego poziomu': Klasyczny wygląd">
+<!ENTITY Ctr_altalertbox	"'Pole ostrzeżenia': Alternatywny wygląd">
 <!ENTITY Ctr_emptyfavicon2	"Wymień standardową ikonę ulubionych (pusta i wykropkowana) na ikonę kartki">
 <!ENTITY Ctr_mstatusbar		"Ruchomy panel paska statusu">
 <!ENTITY Ctr_mstatusbars4e	"Panel paska statusu jest kontrolowany przez 'Status-4-Evar'">
@@ -128,9 +128,9 @@
 <!ENTITY Ctr_mstatusbarpzt	"Panel paska statusu jest kontrolowany przez 'Puzzle Toolbars'">
 <!ENTITY Ctr_mstatusbarabr	"Panel paska statusu jest kontrolowany przez 'The Addon Bar (Restored)'">
 <!ENTITY Ctr_combrelstop	"Połącz przyciski zatrzymania i odświeżania">
-<!ENTITY Ctr_stoprel1		"Ważne: umieść przycisk odświeżania za przyciskiem zatrzymania!">
-<!ENTITY Ctr_panelmenucol	"Menu panelu: alternatywny kolor tła">
-<!ENTITY Ctr_hideprivmask	"Prywatne przeglądanie: ukryj wskaźnik-maskę">
+<!ENTITY Ctr_stoprel1		"Ważne: Umieść przycisk odświeżania za przyciskiem zatrzymania!">
+<!ENTITY Ctr_panelmenucol	"Menu panelu: Alternatywny kolor tła">
+<!ENTITY Ctr_hideprivmask	"Prywatne przeglądanie: Ukryj wskaźnik-maskę">
 <!ENTITY Ctr_navsmallicons	"Małe ikony">
 <!ENTITY Ctr_navlargeicons	"Duże ikony">
 <!ENTITY Ctr_nbisizedelay0	"Opóźnienie inicjalizacji po uruchomieniu przeglądarki">
@@ -146,26 +146,26 @@
 <!ENTITY Ctr_nav_txt_ico3	"Pokaż tylko tekst">
 <!ENTITY Ctr_nav_txt_exp	"Atrybuty eksperymentalne:">
 <!ENTITY Ctr_iat_notf_vt	"Nie dla pionowych pasków narzędzi">
-<!ENTITY Ctr_cpanelmenus	"Menu panelu: widok kompaktowy (zakładki, historia itp.)">
-<!ENTITY Ctr_hidezoomres	"Kontrolki powiększenia na pasku narzędzi: ukryj przycisk resetu powiększenia">
-<!ENTITY Ctr_alt_newtabp	"Strona nowej karty (about:newtab): alternatywny wygląd">
-<!ENTITY Ctr_ctroldsearch	"Stara wyszukiwarka (eksperymentalna)">
+<!ENTITY Ctr_cpanelmenus	"Menu panelu: Widok kompaktowy (zakładki, historia itp.)">
+<!ENTITY Ctr_hidezoomres	"Kontrolki powiększenia na pasku narzędzi: Ukryj przycisk resetu powiększenia">
+<!ENTITY Ctr_alt_newtabp	"Strona nowej karty (about:newtab): Alternatywny wygląd">
+<!ENTITY Ctr_ctroldsearch	"Stara wyszukiwarka (eksperymentalne)">
 <!ENTITY Ctr_addonmanager	"Menedżer dodatków">
-<!ENTITY Ctr_alt_addonsp	"Strona 'więcej informacji': alternatywny wygląd">
+<!ENTITY Ctr_alt_addonsp	"Strona 'więcej informacji': Alternatywny wygląd">
 <!ENTITY Ctr_alt_addonsm	"Alternatywny wygląd">
-<!ENTITY Ctr_am_nowarning	"Listy dodatków: ukryj ostrzeżenia">
-<!ENTITY Ctr_am_compact		"Listy dodatków: widok kompaktowy">
+<!ENTITY Ctr_am_nowarning	"Listy dodatków: Ukryj ostrzeżenia">
+<!ENTITY Ctr_am_compact		"Listy dodatków: Widok kompaktowy">
 <!ENTITY Ctr_am_compact2	"Widok kompaktowy +">
-<!ENTITY Ctr_addonversion	"Listy dodatków: wyświetl wersję dodatku">
+<!ENTITY Ctr_addonversion	"Listy dodatków: Wyświetl wersję dodatku">
 <!ENTITY Ctr_xpinstallui	"Stare okno instalacji dodatku (ustawienie about:config)">
-<!ENTITY Ctr_bmbutpanelm	"Przycisk menu zakładek: wygląd menu panelu">
-<!ENTITY Ctr_bmbutnotext	"Przycisk menu zakładek: ukryj etykietę na pasku zakładek">
-<!ENTITY Ctr_skipprintpr	"Przycisk drukowania: pomiń podgląd wydruku">
-<!ENTITY Ctr_tbconmenu		"Menu kontekstowe paska narzędzi: ukryj 'Przenieś do menu', 'Usuń z paska narzędzi', 'Odśwież wszystkie karty', 'Dodaj zakładki do wszystkich kart...' oraz 'Przywróć zamkniętą kartę'">
+<!ENTITY Ctr_bmbutpanelm	"Przycisk menu zakładek: Wygląd menu panelu">
+<!ENTITY Ctr_bmbutnotext	"Przycisk menu zakładek: Ukryj etykietę na pasku zakładek">
+<!ENTITY Ctr_skipprintpr	"Przycisk drukowania: Pomiń podgląd wydruku">
+<!ENTITY Ctr_tbconmenu		"Menu kontekstowe paska narzędzi: Ukryj 'Przenieś do menu', 'Usuń z paska narzędzi', 'Odśwież wszystkie karty', 'Dodaj zakładki do wszystkich kart...' oraz 'Przywróć zamkniętą kartę'">
 <!ENTITY Ctr_noresizerxp	"Usuń zmieniacz rozmiaru (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Otwórz dodatkowy pasek adresu (Cmd/Ctrl+">
-<!ENTITY Ctr_pmhidelabels	"Wyskakujące okno menu panelu: ukryj etykiety przycisku">
-<!ENTITY Ctr_menupopupscr	"Menu kontekstowe: pokaż pasek przewijania zamiast strzałek przewijania">
+<!ENTITY Ctr_pmhidelabels	"Wyskakujące okno menu panelu: Ukryj etykiety przycisku">
+<!ENTITY Ctr_menupopupscr	"Menu kontekstowe: Pokaż pasek przewijania zamiast strzałek przewijania">
 <!ENTITY Ctr_closegeneral	"Ogólne ikony zamykania">
 
 <!ENTITY Ctr_tabsep_def		"Domyślne separatory kart">
@@ -208,14 +208,14 @@
 <!ENTITY Ctr_feedinurl		"Przycisk RSS">
 <!ENTITY Ctr_hideurelstop	"Ukryj przyciski zatrzymania i odświeżania">
 <!ENTITY Ctr_hideurlgo		"Ukryj przycisk 'Przejdź'">
-<!ENTITY Ctr_hideurlsrg		"Ukryj separatory przycisków 'odśwież, zatrzymaj i przejdź' oraz odstępy">
+<!ENTITY Ctr_hideurlsrg		"Ukryj separatory przycisków 'Odśwież, Zatrzymaj i Przejdź' oraz odstępy">
 <!ENTITY Ctr_urlbardropm	"Przenieś znacznik rozwinięcia na koniec paska adresu">
 <!ENTITY Ctr_altreaderico	"Alternatywne ikony 'Czytnika'">
 <!ENTITY Ctr_hideprbutton	"Ukryj przycisk informujący o zablokowanym wyskakującym oknie">
 <!ENTITY Ctr_urlbar_ib		"Przycisk tożsamości witryny (pole tożsamości)">
 <!ENTITY Ctr_ib_nohovcolor	"Nie pokazuj szarego koloru po najechaniu">
 <!ENTITY Ctr_verifiedcolors	"Kolory przycisków zweryfikowanych stron, połączeń bezpiecznych oraz niebezpiecznych">
-<!ENTITY Ctr_faviconurl		"Ikona ulubionych: ikona bieżącej strony">
+<!ENTITY Ctr_faviconurl		"Ikona ulubionych: Ikona bieżącej strony">
 <!ENTITY Ctr_padlock		"Ikona kłódki dla bezpiecznych połączeń">
 <!ENTITY Ctr_padlock_hid	"Ukryta">
 <!ENTITY Ctr_padlock_def	"Domyślna">
@@ -258,23 +258,23 @@
 <!ENTITY Ctr_menubarnofog	"Usuń kolor tła i mgłę (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Niebieskie kolory Aero pasków narzędzi (i kart)">
-<!ENTITY Ctr_transpttbw10	"Pasek tytułu/menu/kart: usuń kolor tła">
-<!ENTITY Ctr_transptcw10	"Ukryj domyślne przyciski systemowe: minimalizuj, maksymalizuj, zamknij">
-<!ENTITY Ctr_hidenavbar		"Pasek nawigacji: ukryj pasek narzędzi">
+<!ENTITY Ctr_transpttbw10	"Pasek tytułu/menu/kart: Usuń kolor tła">
+<!ENTITY Ctr_transptcw10	"Ukryj domyślne przyciski systemowe: Minimalizuj, Maksymalizuj, Zamknij">
+<!ENTITY Ctr_hidenavbar		"Pasek nawigacji: Ukryj pasek narzędzi">
 <!ENTITY Ctr_navbarpad		"Dodatkowe wypełnienie lewe i prawe">
 <!ENTITY Ctr_navbarpad_l	"Lewe:">
 <!ENTITY Ctr_navbarpad_r	"Prawe:">
-<!ENTITY Ctr_nobookbarbg	"Pasek zakładek: usuń kolor tła">
-<!ENTITY Ctr_bookbarfs		"Pasek zakładek: w trybie pełnoekranowym">
-<!ENTITY Ctr_nonavbarbg		"Pasek nawigacji: usuń kolor tła">
+<!ENTITY Ctr_nobookbarbg	"Pasek zakładek: Usuń kolor tła">
+<!ENTITY Ctr_bookbarfs		"Pasek zakładek: W trybie pełnoekranowym">
+<!ENTITY Ctr_nonavbarbg		"Pasek nawigacji: Usuń kolor tła">
 <!ENTITY Ctr_nonavbarbg1	"Dotyczy dodatkowych pasków narzędzi tego dodatku oraz innych górnych pasków narzędzi.">
 <!ENTITY Ctr_nonavbarbg2	"Dotyczy wszystkich pasków narzędzi Slim Chrome z dodatku 'Beyond Australis'.">
-<!ENTITY Ctr_nonavborder	"Pasek zakładek: dodaj obramowanie na górze paska">
-<!ENTITY Ctr_nonavtbborder	"Górne paski: usuń obramowanie paska">
-<!ENTITY Ctr_hidesbclose	"Paski boczne: ukryj przycisk zamknięcia paska bocznego">
-<!ENTITY Ctr_notextshadow	"Paski narzędzi: ukryj cień tekstu na pasku narzędzi i na karcie">
-<!ENTITY Ctr_chevronfix		"Pasek nawigacji: ukryj podwójną strzałkę ('szewron') na końcu paska">
-<!ENTITY Ctr_tbsep_winc		"Górne paski: dodatkowe separatory paska narzędzi">
+<!ENTITY Ctr_nonavborder	"Pasek zakładek: Dodaj obramowanie na górze paska">
+<!ENTITY Ctr_nonavtbborder	"Górne paski: Usuń obramowanie paska">
+<!ENTITY Ctr_hidesbclose	"Paski boczne: Ukryj przycisk zamknięcia paska bocznego">
+<!ENTITY Ctr_notextshadow	"Paski narzędzi: Ukryj cień tekstu na pasku narzędzi i na karcie">
+<!ENTITY Ctr_chevronfix		"Pasek nawigacji: Ukryj podwójną strzałkę ('szewron') na końcu paska">
+<!ENTITY Ctr_tbsep_winc		"Górne paski: Dodatkowe separatory paska narzędzi">
 
 <!ENTITY Ctr_closeabarbut	"Pasek dodatków: Usuń przycisk zamknięcia">
 <!ENTITY Ctr_highaddonsbar	"Zwiększ wysokość">
@@ -297,7 +297,7 @@
 <!ENTITY Ctr_otherctroptns	"Inne ustawienia">
 <!ENTITY Ctr_cuibotbuttons	"Dodatkowe przyciski w trybie 'dostosowywania'">
 <!ENTITY Ctr_bookmarkoinpw	"Pozycja 'Otwórz w nowym oknie prywatnym' w menu kontekstowym zakładek">
-<!ENTITY Ctr_nodevtheme		"Zapobiegaj włączeniu 'Motyw Edycji Deweloperskiej'">
+<!ENTITY Ctr_nodevtheme		"Zapobiegaj włączeniu 'Motywu Edycji Deweloperskiej'">
 
 <!ENTITY Ctr_experttweaks	"Zaawansowane">
 <!ENTITY Ctr_fx34search		"Odznaczenie tego ustawienia usuwa 'nowy wygląd wyszukiwania' i przywraca stary.">
